--- a/ui/main.reel/main.html
+++ b/ui/main.reel/main.html
@@ -159,7 +159,7 @@
     <div data-montage-id="main" class="main">
         <header class="Toolbar">
             <section class="Toolbar-group">
-                <button data-montage-id="viewmodeButton" class="Button--viewmode"></button>
+                <button data-montage-id="viewmodeButton" class="Toolbar-button Toolbar-button--viewmode"></button>
                 <div class="Overlay">
                     <img class="Overlay-icon" src="/import-activity/assets/images/pdf-icon.png">
                     <input data-montage-id="opacity" class="Overlay-range" type="range">
@@ -172,7 +172,7 @@
             <section data-montage-id="copyrightCondition" class="Toolbar-group Copyright">
                 <label class="Copyright-title">Copyright</label>
                 <div data-montage-id="copyrightPosition"></div>
-                <button data-montage-id="saveButton" class="Copyright-saveButton">Save</button>
+                <button data-montage-id="saveButton" class="Toolbar-button Toolbar-button--action Copyright-saveButton">Save</button>
             </section>
         </header>
         
