Slider + checkbox styling

--- a/ui/main.reel/main.html
+++ b/ui/main.reel/main.html
@@ -31,7 +31,7 @@
             },
 
             "opacityRange": {
-                "prototype": "native/ui/input-range.reel",
+                "prototype": "matte/ui/input-range.reel",
                 "properties": {
                     "element": {"#": "opacity"},
                     "name": "opacity",
@@ -45,7 +45,7 @@
             },
 
             "autoOpacityCheck": {
-                "prototype": "native/ui/input-checkbox.reel",
+                "prototype": "matte/ui/input-checkbox.reel",
                 "properties": {
                     "element": {"#": "autoOpacity"}
                 },
@@ -165,7 +165,7 @@
                     <input data-montage-id="opacity" class="Overlay-range" type="range">
                     <img class="Overlay-icon" src="/import-activity/assets/images/epub-icon.png">
                     <label>
-                        <input data-montage-id="autoOpacity" class="Overlay-autoOpacity" type="checkbox">auto
+                        <input data-montage-id="autoOpacity" class="Overlay-autoOpacity" type="checkbox"> auto
                     </label>
                 </div>
             </section>
