Copyright position buttons

--- a/ui/tools/position-inspector.reel/position-inspector.html
+++ b/ui/tools/position-inspector.reel/position-inspector.html
@@ -54,24 +54,10 @@
 </head>
 <body>
     <div data-montage-id="positionInspector" class="PositionInspector">
-        <section>
-            <label>
-                <input type="radio" data-montage-id="topPosition">
-                Top
-            </label>
-            <label>
-                <input type="radio" data-montage-id="rightPosition">
-                Right
-            </label>
-            <label>
-                <input type="radio" data-montage-id="bottomPosition">
-                Bottom
-            </label>
-            <label>
-                <input type="radio" data-montage-id="leftPosition">
-                Left
-            </label>
-        </section>
+        <input type="radio" data-montage-id="leftPosition" class="PositionInspector-radio PositionInspector-radio--left" title="left">
+        <input type="radio" data-montage-id="topPosition" class="PositionInspector-radio PositionInspector-radio--top" title="top">
+        <input type="radio" data-montage-id="bottomPosition" class="PositionInspector-radio PositionInspector-radio--bottom" title="bottom">
+        <input type="radio" data-montage-id="rightPosition" class="PositionInspector-radio PositionInspector-radio--right" title="right">
     </div>
 </body>
 </html>
