Replaces pdf and epub icons

--- a/ui/main.reel/main.html
+++ b/ui/main.reel/main.html
@@ -161,9 +161,9 @@
             <section class="Toolbar-group">
                 <button data-montage-id="viewmodeButton" class="Toolbar-button Toolbar-button--viewmode"></button>
                 <div class="Overlay">
-                    <img class="Overlay-icon" src="/import-activity/assets/images/pdf-icon.png">
+                    <img class="Overlay-icon" src="/assets/img/icon-pdf.png">
                     <input data-montage-id="opacity" class="Overlay-range" type="range">
-                    <img class="Overlay-icon" src="/import-activity/assets/images/epub-icon.png">
+                    <img class="Overlay-icon" src="/assets/img/icon-epub.png">
                     <label>
                         <input data-montage-id="autoOpacity" class="Overlay-autoOpacity" type="checkbox"> auto
                     </label>
