--- a/pdf-converter/index.html
+++ b/pdf-converter/index.html
@@ -26,6 +26,7 @@
       PDFJS.disableAutoFetch = true;
       PDFJS.disableImagePrescale = true;
       PDFJS.useTrimBox = true;
+      PDFJS.enableSoftMask = true;
       PDFJS.useExternalObjectsCache = true;     // Needed in order to be able to cache/save to disk all images and fonts
       globalScope.pdfOpLogging = false;
     </script>
