--- a/pdf-converter/ui/main.reel/main.html
+++ b/pdf-converter/ui/main.reel/main.html
@@ -1,6 +1,8 @@
 <html><head>
     <title>Application-Controller</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="../../templates/epub3/OEBPS/assets/style.css" />
+
 
     <script type="text/montage-serialization">
     {
