added reading order object to reading along which piggybacks on the pagedocument's channel
the piggy backing seemed to be working, but not anymore. probably have ot go and use q connection instead.

--- a/ui/main.reel/main.html
+++ b/ui/main.reel/main.html
@@ -143,7 +143,7 @@
                     "removalStrategy": "hide"
                 },
                 "bindings": {
-                    "condition": {"<-": "!!@owner.currentPage.pageWindow && @owner.currentPage.hasReadAlong"}
+                    "condition": {"<-": "!!@owner.currentPage.pageWindow && @owner.currentPage.readAlong.hasReadAlong"}
                 }
             },
 
