--- a/ui/spread-view.reel/spread-view.html
+++ b/ui/spread-view.reel/spread-view.html
@@ -40,7 +40,7 @@
             },
 
             "rightPage": {
-                "prototype": "ui/page-view.reel",
+                "prototype": "ui/read-along-debug-view.reel",
                 "properties": {
                     "element": {"#": "rightPage"}
                 }
