--- a/ui/read-along-debug-view.reel/read-along-debug-view.html
+++ b/ui/read-along-debug-view.reel/read-along-debug-view.html
@@ -24,7 +24,7 @@
                 "element": {"#": "readAloudDebug"}
             },
             "bindings": {
-                "value": {"<-": "@owner.pageDocument.readAlong.readingOrder.workaroundForPromiseController"}
+                "value": {"<-": "@owner.pageDocument.readAlong.readingOrder.text"}
             }
         },
         "textPromiseController": {
