can see text in the debug view, but not the most recent text

--- a/ui/read-along-debug-view.reel/read-along-debug-view.html
+++ b/ui/read-along-debug-view.reel/read-along-debug-view.html
@@ -24,13 +24,13 @@
                 "element": {"#": "readAloudDebug"}
             },
             "bindings": {
-                "value": {"<-": "@owner.pageDocument.readAlong.readingOrder.text"}
+                "value": {"<-": "@textPromiseController.value"}
             }
         },
         "textPromiseController": {
             "prototype": "montage/core/promise-controller",
             "bindings": {
-                "value": {"<-": "@owner.pageDocument.readAlong.readingOrder.text"}
+                "promise": {"<-": "@owner.pageDocument.readAlong.readingOrder.text"}
             }
         }
     }
