aligner is connected to plume

--- a/ui/main.reel/main.html
+++ b/ui/main.reel/main.html
@@ -148,7 +148,7 @@
             },
 
             "readAlongButton": {
-                "prototype": "matte/ui/button.reel",
+                "prototype": "matte/ui/image.reel",
                 "properties": {
                     "element": {"#": "readAlongButton"}
                 },
