using wav for the final audio, now reads the left page on load

--- a/ui/spread-view.reel/spread-view.html
+++ b/ui/spread-view.reel/spread-view.html
@@ -33,14 +33,14 @@
             },
 
             "leftPage": {
-                "prototype": "ui/read-along-debug-view.reel",
+                "prototype": "ui/page-view.reel",
                 "properties": {
                     "element": {"#": "leftPage"}
                 }
             },
 
             "rightPage": {
-                "prototype": "ui/read-along-debug-view.reel",
+                "prototype": "ui/page-view.reel",
                 "properties": {
                     "element": {"#": "rightPage"}
                 }
