--- a/ui/read-along-debug-view.reel/read-along-debug-view.html
+++ b/ui/read-along-debug-view.reel/read-along-debug-view.html
@@ -56,10 +56,10 @@
             "prototype": "matte/ui/image.reel",
             "properties": {
                 "element": {"#": "buttonImage"},
-                "src": "../../assets/img/play.png"
+                "src": "../../assets/img/play.svg"
             },
             "bindings": {
-               "src": {"<-": "@owner.readAlong.playing ? '../../assets/img/pause.png' : '../../assets/img/play.png' "}
+               "src": {"<-": "@owner.readAlong.playing ? '../../assets/img/pause.svg' : '../../assets/img/play.svg' "}
             }
         }
     }
@@ -71,8 +71,8 @@
         <iframe seamless scrolling="no"></iframe>
 
         <div class="ReadAlongDebugViewPages-debug">
-            <button data-montage-id="readAlongButton" class="Toolbar-button" >Read Aloud
-                <img data-montage-id="buttonImage" class="ReadAlongDebugViewPages-icon" src="../../assets/img/play.png"></img>
+            <button data-montage-id="readAlongButton" class="ReadAlongDebugViewPages-button">
+                <img data-montage-id="buttonImage" class="ReadAlongDebugViewPages-icon" src="../../assets/img/play.svg">
             </button>
         </div>
         <div data-montage-id="readAloudDebug" hidden class="ReadAlongDebugViewPages-debug"></div>
